force-app/main/default/objects/Payment_Status_List__mdt/Payment_Status_List__mdt.object-meta.xml
<CustomObject>
    <label>Payment Status List</label>
    <pluralLabel>Payment Status Lists</pluralLabel>
</CustomObject>