force-app/main/default/objects/Payment_Status_List__mdt/fields/PAY_CHK_Show_in_back_office__c.field-meta.xml
<CustomField>
    <fullName>PAY_CHK_Show_in_back_office__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the record (Status - Reason) has to be displayed in Back Office --&gt; CHECKED
Or the record (Status - Reason) doesn&apos;t have to be displayed in Back Office--&gt; UNCHECKED</description>
    <label>Show in back office</label>
    <type>Checkbox</type>
</CustomField>