force-app/main/default/objects/Payment_Status_List__mdt/fields/PAY_CHK_Show_in_front__c.field-meta.xml
<CustomField>
    <fullName>PAY_CHK_Show_in_front__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the record (Status - Reason) has to be displayed in Front (community) --&gt; CHECKED
Or the record (Status - Reason) doesn&apos;t have to be displayed in Front (community)--&gt; UNCHECKED</description>
    <label>Show in front</label>
    <type>Checkbox</type>
</CustomField>