force-app/main/default/objects/Payment_Status_List__mdt/fields/PAY_PCK_Reason_code__c.field-meta.xml
<CustomField>
    <fullName>PAY_PCK_Reason_code__c</fullName>
    <label>Reason code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>000</fullName>
                <default>true</default>
                <label>000</label>
            </value>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>199</fullName>
            </value>
            <value>
                <fullName>999</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>