force-app/main/default/objects/Payment_Status_List__mdt/fields/PAY_PCK_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>PAY_PCK_Status_Name__c</fullName>
    <label>Status Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Authorized</fullName>
                <default>true</default>
                <label>Authorized</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed (refund not authorized)</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In review</fullName>
            </value>
            <value>
                <fullName>Not authorized</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Refund authorized leg 2</fullName>
            </value>
            <value>
                <fullName>Refund completed</fullName>
            </value>
            <value>
                <fullName>Refund confirmed leg 2</fullName>
            </value>
            <value>
                <fullName>Refunded leg 1</fullName>
            </value>
            <value>
                <fullName>Refunded leg 2</fullName>
            </value>
            <value>
                <fullName>Refund initiated</fullName>
            </value>
            <value>
                <fullName>Refund leg 1 authorized</fullName>
            </value>
            <value>
                <fullName>Refund leg 2 requested</fullName>
            </value>
            <value>
                <fullName>Refund rejected leg 2</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>